Overview page can load. So it begins

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" dir="ltr">
+<![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8" lang="en" dir="ltr">
+<![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9" lang="en" dir="ltr">
+<![endif]-->
+<!--[if gt IE 8]>
+  <!--> <html lang="en" dir="ltr"
+              xmlns:content="https://purl.org/rss/1.0/modules/content/"
+              xmlns:dc="https://purl.org/dc/terms/"
+              xmlns:foaf="https://xmlns.com/foaf/0.1/"
+              xmlns:og="https://ogp.me/ns#"
+              xmlns:rdfs="https://www.w3.org/2000/01/rdf-schema#"
+              xmlns:sioc="https://rdfs.org/sioc/ns#"
+              xmlns:sioct="https://rdfs.org/sioc/types#"
+              xmlns:skos="https://www.w3.org/2004/02/skos/core#"
+              xmlns:xsd="https://www.w3.org/2001/XMLSchema#"
+              xmlns:fb="https://ogp.me/ns/fb#"
+              xmlns:article="https://ogp.me/ns/article#"
+              xmlns:book="https://ogp.me/ns/book#"
+              xmlns:profile="https://ogp.me/ns/profile#"
+              xmlns:video="https://ogp.me/ns/video#"><!--
+<![endif]-->
 <html>
   <head>
-    <title>Natetaubitzdotcom</title>
+    <meta charset="utf-8" />
+    <meta content="ie=edge, chrome=1" http-equiv="x-ua-compatible" />
+
+    <title>PlotWatt</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <title>Nathan Taubitz - Software Developer</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!--[if lt IE 9]>
+    <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
 
   <body>
