added bootstrap. made a basic layout with nav for overview and contact. You can contact me now.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+@import "colors.css.scss";
+@import "fonts.css.scss";
+
+@import "bootstrap/bootstrap.css";
+@import "bootstrap/bootstrap-grid.css";
+@import "bootstrap/bootstrap-reboot.css";
+
+@import "nav.css.scss";
