--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,13 @@
     <title>PlotWatt</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nathan Taubitz - Software Developer</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -47,6 +49,22 @@
   </head>
 
   <body>
+    <ul class="nav main">
+      <li class="nav-item">
+        <a class="nav-link <%= 'active' if @active_page == 'overview' %>" href="/">overview</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link <%= 'active' if @active_page == 'contact' %>" href="/contact">contact</a>
+      </li>
+    </ul>
     <%= yield %>
+
+  <footer class="page-footer font-small indigo fixed-bottom">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="/contact">Nathan Taubitz</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
   </body>
 </html>
