--- a/app/views/pages/overview.html.erb
+++ b/app/views/pages/overview.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome</h1>
-<p>My name is Nate. This is my website.</p>
+<% @active_page = 'overview' %>
+<div class="container">
+  <h2>welcome</h2>
+  <p>My name is Nate. This is my website.</p>
+</div>
