--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -19,7 +19,7 @@
   <% end %>
   <div class="container">
     <div class="row">
-      <div class="col-4">
+      <div class="col col-sm-12 col-lg-4">
         <% unless @show_contact_alert %>
           <%= form_tag  do %>
             <div class="form-group">
