added logo to the nav

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -12,6 +12,10 @@ ul.nav {
           color: $color-black;
         }
       }
+      .logo {
+        width: 31px;
+        margin: 5px 0 0 5px;
+      }
     }
   }
 }
