--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <meta charset="utf-8" />
     <meta content="ie=edge, chrome=1" http-equiv="x-ua-compatible" />
 
-    <title>PlotWatt</title>
+    <title>Nathan Taubitz</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -50,6 +50,9 @@
 
   <body>
     <ul class="nav main">
+      <li class="nav-item">
+        <%= image_tag('logo.png', border: 0, class: 'logo') %>
+      </li>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if @active_page == 'overview' %>" href="/">overview</a>
       </li>
