setting up a code and react page

--- a/app/views/pages/overview.html.erb
+++ b/app/views/pages/overview.html.erb
@@ -1,5 +1,8 @@
 <% @active_page = 'overview' %>
 <div class="container">
   <h2>welcome</h2>
-  <p>My name is Nate. This is my website.</p>
+  <p>My name is Nate. This is my website. Who knows what it will become.</p>
+  <p>You can check out things i like to learn in <a href="/code">technology</a>, or just get a hold of me
+    <a href="/contact">here</a>.
+  </p>
 </div>
