--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,9 @@
         <a class="nav-link <%= 'active' if @active_page == 'overview' %>" href="/">overview</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link <%= 'active' if @active_page == 'code' %>" href="/">code</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link <%= 'active' if @active_page == 'contact' %>" href="/contact">contact</a>
       </li>
     </ul>
