--- a/app/views/pages/code.html.erb
+++ b/app/views/pages/code.html.erb
@@ -7,6 +7,11 @@
   <p>Learn technology for an hour for 5 days. Then, learn something else for 2.</p>
   <p>Here are some subjects that i've been dabbling in.</p>
   <ul>
+
+    <li>This site. i started with a Rails 5 project and i am using this platform
+      to learn everything from new front end frameworks like Bootstrap, React and Angular to algorithms.
+      You can find all the source on my <a target="_blank" href="https://github.com/ntaubitz">github page</a>.
+    </li>
     <li><a href="/react">React</a>, the javascript stuff</li>
   </ul>
 </div>
