--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,7 @@
 @import "colors.css.scss";
 @import "fonts.css.scss";
 
-@import "bootstrap/bootstrap.css";
-@import "bootstrap/bootstrap-grid.css";
-@import "bootstrap/bootstrap-reboot.css";
-
+@import "bootstrap.min.css";
+@import "bootstrap-theme.min.css";
 @import "nav.css.scss";
+@import "short-posts.css.scss";
