--- a/app/assets/stylesheets/colors.css.scss
+++ b/app/assets/stylesheets/colors.css.scss
@@ -1,2 +1,6 @@
 $color-white: #FFF;
 $color-black: #000;
+$color-background: #eee;
+$color-border: #eee;
+$color-light-blue: #cce5ff;
+$color-medium-blue: #b8daff;
