--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
 
     <!--[if lt IE 9]>
     <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -49,23 +49,32 @@
   </head>
 
   <body>
-    <ul class="nav main">
-      <li class="nav-item">
-        <%= image_tag('logo.png', border: 0, class: 'logo') %>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link <%= 'active' if @active_page == 'overview' %>" href="/">overview</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link <%= 'active' if @active_page == 'code' %>" href="/code">code</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link <%= 'active' if @active_page == 'contact' %>" href="/contact">contact</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <%= image_tag('logo.png', border: 0, class: 'logo') %>
+          </a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="<%= 'active' if @active_page == 'overview' %>">
+              <a href="/">overview</a>
+            </li>
+            <li class="<%= 'active' if @active_page == 'code' %>">
+              <a href="/code">code</a>
+            </li>
+            <li class="<%= 'active' if @active_page == 'contact' %>">
+              <a href="/contact">contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <%= yield %>
 
-  <br/><br/><br/>
+  <hr/>
   <footer class="page-footer font-small indigo fixed-bottom">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
