setting up react for production

--- a/app/views/pages/code.html.erb
+++ b/app/views/pages/code.html.erb
@@ -12,6 +12,6 @@
       to learn everything from new front end frameworks like Bootstrap, React and Angular to algorithms.
       You can find all the source on my <a target="_blank" href="https://github.com/ntaubitz">github page</a>.
     </li>
-    <li><a href="/react">React</a>, the javascript stuff</li>
+    <li><a target="_blank" href="http://react.natetaubitz.us">React</a>, the javascript stuff</li>
   </ul>
 </div>
