--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,9 @@
             <li class="<%= 'active' if @active_page == 'code' %>">
               <a href="/code">code</a>
             </li>
+            <li class="<%= 'active' if @active_page == 'blog' %>">
+              <a href="/blog">blog</a>
+            </li>
             <li class="<%= 'active' if @active_page == 'contact' %>">
               <a href="/contact">contact</a>
             </li>
