small changes and bugs after prod deploy

--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -12,6 +12,7 @@
       </div>
     </div>
     <div class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <h2><%= @active_blog_post.subject %></h2>
       <%= @active_blog_post.markup.html_safe %>
       <small>Posted: <%= @active_blog_post.created_at.strftime('%B %d %Y') %></small>
     </div>
