--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col col-sm-12 col-md-6">
         <div class="form-group">
-          <label for="markup">subject</label>
+          <label for="markup">markup</label>
           <textarea class="form-control" rows="20" id="markup" name="markup" placeholder="markup"></textarea>
         </div>
       </div>
