changing page titles

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,7 @@
-<% @active_page = 'dashboard' %>
+<%
+  @active_page = 'dashboard'
+  @page_title = 'Dashboard'
+%>
 
 <div class="container">
   <h1>dashboard</h1>
