--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
     <meta charset="utf-8" />
     <meta content="ie=edge, chrome=1" http-equiv="x-ua-compatible" />
 
-    <title>Nathan Taubitz</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <title><%= @page_title %></title>
+    <meta name="description" content="A web site that is the online version of Nathan Taubitz. A real world technological portfolio." />
+    <meta name="keywords" content="nathan,taubitz,technology,ruby,rails,presentation,full-stack,development,blogging" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nathan Taubitz - Software Developer</title>
     <%= csrf_meta_tags %>
