--- a/app/views/pages/code.html.erb
+++ b/app/views/pages/code.html.erb
@@ -1,4 +1,7 @@
-<% @active_page = 'code' %>
+<%
+  @active_page = 'code'
+  @page_title = 'Nathan Taubitz: Software Development, aka Code'
+%>
 <div class="container">
   <h2>code</h2>
   <p>
