--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,4 +1,7 @@
-<% @active_page = 'contact' %>
+<%
+  @active_page = 'contact'
+  @page_title = 'Nathan Taubitz: Login'
+%>
 
 <div class="container">
   <h1>login</h1>
