--- a/app/views/pages/overview.html.erb
+++ b/app/views/pages/overview.html.erb
@@ -1,4 +1,8 @@
-<% @active_page = 'overview' %>
+<%
+  @active_page = 'overview'
+  @page_title = 'Nathan Taubitz: Husband, Father, Technologist'
+%>
+
 <div class="jumbotron">
   <div class="container">
     <h1>welcome</h1>
