--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,7 @@
-<% @active_page = 'contact' %>
+<%
+  @active_page = 'contact'
+  @page_title = 'Nathan Taubitz: Contact Me'
+%>
 <div class="container">
   <h2>contact</h2>
   <p>
