--- a/app/views/pages/code.html.erb
+++ b/app/views/pages/code.html.erb
@@ -15,6 +15,9 @@
       to learn everything from new front end frameworks like Bootstrap, React and Angular to algorithms.
       You can find all the source on my <a target="_blank" href="https://github.com/ntaubitz">github page</a>.
     </li>
-    <li><a target="_blank" href="http://react.natetaubitz.us:3000">React</a>, the javascript stuff</li>
+    <li>
+      <a href="/vue">Vue for feeds</a> uses Vue JS and my custom service layer
+      to implement a feed based infinite scroll solution for social media
+    </li>
   </ul>
 </div>
