adding jumbotron background and fixing width of all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,7 +117,9 @@
       </div>
     </nav>
 
+    <div class="container-fluid body">
     <%= yield %>
+    </div>
 
   <hr/>
   <footer class="page-footer font-small indigo fixed-bottom">
