--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -31,5 +31,5 @@
       <% end %>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">login</button>
 <% end %>
