Vue JS works with TypeScript. Blog posts now html encode <code> blocks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,5 +23,5 @@
 /*@import "nav.css.scss";*/
 /*@import "short-posts.css.scss";*/
 /**/
-/*@import "highlight/github.css";*/
+@import "highlight/github.css";
 
