--- a/app/views/dashboard/_short_posts.html.erb
+++ b/app/views/dashboard/_short_posts.html.erb
@@ -8,6 +8,6 @@
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">post</button>
 
 <% end %>
