--- a/app/views/pages/vue.html.erb
+++ b/app/views/pages/vue.html.erb
@@ -4,6 +4,8 @@
 %>
 <h2>Vue JS</h2>
 <p>Here it is</p>
-<div id="vue-feed">
-  <feed></feed>
-</div>
+<div id="vue_app">
+   {{message}}
+   <app></app>
+    <natedogg></natedogg>
+ </div>
