runs on ruby 3.0.2 and rails 6. site updates. blog uses markdown

--- a/app/assets/stylesheets/colors.css.scss
+++ b/app/assets/stylesheets/colors.css.scss
@@ -2,5 +2,6 @@ $color-white: #FFF;
 $color-black: #000;
 $color-background: #eee;
 $color-border: #eee;
-$color-light-blue: #cce5ff;
-$color-medium-blue: #b8daff;
+$color-light-blue: #4a98f9;
+$color-grey-blue: #4c637f;
+$color-medium-blue: #6dabf8
