--- a/app/views/pages/code.html.erb
+++ b/app/views/pages/code.html.erb
@@ -14,8 +14,6 @@
     to learn everything from new front end frameworks like Bootstrap, React and Angular to algorithms.
     You can find all the source on my <a target="_blank" href="https://github.com/ntaubitz">github page</a>.
   </li>
-  <li>
-    <a href="/vue">Vue for feeds</a> uses Vue JS and my custom service layer
-    to implement a feed based infinite scroll solution for social media
-  </li>
+  <li>Signal processing and real-time streaming.</li>
+  <li>Anything Ruby/Rails.</li>
 </ul>
