--- a/app/assets/stylesheets/overview.css.erb
+++ b/app/assets/stylesheets/overview.css.erb
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url('<%= image_url('jumbotron_background.jpg') %>');
+  background-image: url('<%= image_url('beach-bkg.png') %>');
   background-color: transparent;
 }
 
