--- a/app/views/dashboard/_blog_posts.html.erb
+++ b/app/views/dashboard/_blog_posts.html.erb
@@ -25,7 +25,7 @@
           <div class="col col-sm-12">
             <div class="form-group">
               <label for="markup">markup</label>
-              <textarea class="form-control" rows="20" id="markup" name="markup" placeholder="markup"><%= @active_blog_post.markup.html_safe %></textarea>
+              <textarea class="form-control" rows="20" id="markup" name="markup" placeholder="markup"><%= @active_blog_post.markup %></textarea>
             </div>
           </div>
         </div>
