--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,45 +3,22 @@
   @page_title = 'Nathan Taubitz: Contact Me'
 %>
 <div class="row">
-  <div class="col col-md-4">
+  <div class="col col-md-6">
     <h4>contacting me</h4>
     <p>
       i communicate in many ways, most of which i don't make publicly available.
-      Check out my LinkedIn profile or send me a note below and i'll respond as soon as possible.
-    </p>
-    <p>
-      If you are looking for a resume, please direct contact me and explain what you are looking
-      for so that i can get you the correct resume.
+      Check out my LinkedIn profile or check out a video on YouTube.
     </p>
   </div>
-  <div class="col col-md-4">
+  <div class="col col-md-6">
     <h4>social media</h4>
     <p>
       Check out my LinkedIn profile at
       <a href="http://www.linkedin.com/in/nathan-taubitz" target="_blank">www.linkedin.com/in/nathan-taubitz</a>
     </p>
-  </div>
-  <div class="col col-md-4">
-    <% if @show_contact_alert %>
-      <div class="alert alert-success">
-        <strong>Awww!</strong> Thanks, i'll get back with you as soon as humanly possible.
-      </div>
-    <% end %>
-
-    <% unless @show_contact_alert %>
-      <h4>direct contact</h4>
-      <%= form_tag  do %>
-        <div class="form-group">
-          <label for="email">email address</label>
-          <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="enter email">
-          <small id="emailHelp" class="form-text text-muted">i'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-          <label for="note">tell me your thoughts...</label>
-          <textarea class="form-control" rows="5" id="note" name="note"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      <% end %>
-    <% end %>
+    <p>
+      Check out some videos
+      <a href="https://www.youtube.com/user/ntaubitz" target="_blank">www.youtube.com/user/ntaubitz</a>
+    </p>
   </div>
 </div>
